# fantasy-footballer

./: .envrc.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  Makefile  README.md  docker-compose.yml  fly.toml.example  pyproject.toml
backend/: .pre-commit-config.yaml  .pylintrc  Makefile  pyproject.toml
backend/images/: Makefile
backend/images/fantasy-footballer/image/: Dockerfile  api.py  extra_docker_pip_requirements.txt  run.py
backend/images/fantasy-footballer/tests/: run_image_tests.sh
backend/src/: __init__.py
backend/src/fantasy_footballer/: __init__.py  app.py
backend/src/fantasy_footballer/api/: api.py  crud.py  data.py  database.py  main.py  models.py  schemas.py
backend/src/fantasy_footballer/database/: fill_tables.py  init.sql  initialize_tables.sql
backend/src/fantasy_footballer/database_init/: fetcher.py  players_init.sql  teams_init.sql
backend/src/fantasy_footballer/fetcher/: fetcher.py
backend/src/fantasy_footballer/groupme/: app.py
dbt/fantasy_footballer/: MODELS.md  dbt_project.yml  packages.yml  profiles.yml
dbt/fantasy_footballer/macros/: format_metric_value.sql
dbt/fantasy_footballer/models/base/: seeds.yml  sources.yml
dbt/fantasy_footballer/models/sources/: s002.yml
dbt/fantasy_footballer/models/staging/: properties.yml  seeds.yml  stg__chat_messages.sql  stg__chat_reactions.sql  stg__matchup_players.sql  stg__owner_display_names.sql  stg__player_stats.sql  stg__player_weeks.sql  stg__players.sql  stg__settings_matchup_weeks_map.sql  stg__source_metadata.sql  stg__team_current_rosters.sql  stg__team_matchups.sql  stg__team_week_players.sql  stg__team_weeks.sql  stg__teams.sql
dbt/fantasy_footballer/models/utilities/: all_years.sql  all_years_by_owner.sql  current_year.sql  nfl_teams.sql  owner_year_map.sql  playoff_matchups.sql  properties.yml
dbt/fantasy_footballer/seed_examples/: owner_names.csv
dbt/fantasy_footballer/seeds/: all_time_record_metrics.csv  glossary_terms.csv  h2h_metrics.csv  h2h_rivalry_metrics.csv  season_highlight_metrics.csv
dbt/fantasy_footballer/seeds/properties/: all_time_record_metrics.yml  display_names.yml  glossary_terms.yml  h2h_metrics.yml  h2h_rivalry_metrics.yml  owner_handles.yml  owner_names.yml  season_highlight_metrics.yml  users.yml
dbt/fantasy_footballer/tests/: assert_all_play_expected_equals_actual.sql  assert_career_record_matches_source.sql  assert_h2h_extremes_within_league_records.sql  assert_league_reg_season_zero_sum.sql  assert_matchup_margins_arithmetic.sql  assert_matchup_titles_match_week_chips.sql  assert_postseason_placements_match_espn.sql
dbt/fantasy_footballer/tests/generic/: assert_all_values_present.sql  assert_model_has_rows.sql  test_average_equals.sql  test_range.sql
docs/: 39-league-highlights-page.md  architecture-roadmap.md  feature-backlog.md  investigations.md  open-discussion.md  security.md
fantasy-footballer-webapp/: package-lock.json  package.json
fantasy-footballer-webapp/src/data/: sampleData.js
fantasy-footballer-webapp/src/pages/chatstats/: chatstats.js
fantasy-footballer-webapp/src/pages/members/: members.css  members.js
frontend/: package-lock.json  package.json
frontend/image/: Dockerfile
frontend/src/: App.js
frontend/src/pages/gallery/: gallery.js
frontend/src/pages/history/: history.js
frontend/src/pages/home/: home.js
frontend/src/pages/members/: members.js
image/: .env.example  Dockerfile
images/: Makefile
images/fantasy-footballer/image/: Dockerfile  run.py
images/fantasy-footballer/tests/: run_image_tests.sh
resources/: league_sw_onethree.json
resources/dbt_seeds/: display_names.csv  owner_names.csv  users.csv
scripts/: deploy_app.sh  down.sh  preview_h2h.py  preview_highlights.py  preview_lineups.py  preview_lineups_section.py  preview_postseason.py  preview_roster_page.py  preview_run.py  preview_schedule.py  preview_spotlight_tabs.py  preview_weekly_roster.py  probe_espn_history.py  query_db.py  rotate_secrets.py  run_dbt_local.sh  stub_sensitive_seeds.sh  truncate_dbt_seeds.py
scripts/imessage/: __main__.py  extract.py  parse.py
scripts/imessage/transformers/: messages.py  reactions.py
scripts/preview/: h2h.py  highlights.py  lineups.py  lineups_section.py  postseason.py  roster_page.py  run.py  splash.py  spotlight.py  spotlight_header.py  spotlight_tabs.py  weekly_roster.py
src/: main.py
src/fantasy_footballer/: analytics.py  main.py
src/fantasy_footballer/analytics/: analytics.py
src/fantasy_footballer/api/: api.py  crud.py
src/fantasy_footballer/backend/: BACKEND.md  db.py  db_init.py  encryption.py  engine.py  fetch.py  io_utils.py  models.py  utils.py
src/fantasy_footballer/backend/sources/: utils.py
src/fantasy_footballer/database/: engine.py  models.py  schemas.py
src/fantasy_footballer/etl/: extract.py  load.py  main.py  transform.py
src/fantasy_footballer/frontend/: FRONTEND.md  glossary.py  group_chat.py  h2h_dashboard.py  league_highlights.py  player_data.py  postseason_history.py  roster_production.py  strength_of_schedule.py  utils.py
src/fantasy_footballer/frontend/admin/: home.py
src/fantasy_footballer/frontend/draft_analysis/: auction_draft_table.py  draft_analysis.py
src/fantasy_footballer/groupme/: app.py
(+141 files in other folders)
