[tool.poetry]
name = "fantasy_footballer"
version = "0.1.0"
description = ""
authors = ["Sean Wieser <seanwieser@gmail.com>"]
readme = "README.md"
packages = [
    { include = "fantasy_footballer", from = "src" },
]

[tool.poetry.dependencies]
python = "3.12.5"
espn-api = "0.43.0"
matplotlib = "^3.6.3"
click = "^8.1.7"
nicegui = "^2.5"
inflection = "^0.5.1"
duckdb = "^1.1.3"
dbt-core = "^1.8.8"
dbt-duckdb = "^1.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.3"
pylint = "2.17.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.append('.venv/lib/python3.10/site-packages/')"

[tool.pylint."MESSAGE CONTROL"]
disable = ["import-error", "no-member", "R0903", "unused-import", "consider-using-in"]
good-names = ["db", "id"]

[tool.pylint.FORMAT]
max-line-length = 120