[tool.poetry]
name = "fantasy_footballer"
version = "0.1.0"
description = ""
authors = ["Sean Wieser <seanwieser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
espn-api = "^0.29.2"
matplotlib = "^3.6.3"
requests = "2.28.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
