[tool.poetry]
name = "fantasy_footballer"
version = "0.1.0"
description = ""
authors = ["Sean Wieser <seanwieser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
espn-api = "^0.29.2"
matplotlib = "^3.6.3"
requests = "2.28.2"
sqlalchemy = "^2.0.9"
fastapi = "0.95.0"
uvicorn = "0.21.1"
psycopg2-binary = "2.9.6"
click = "8.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.3"
pylint = "2.17.2"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.append('.venv/lib/python3.10/site-packages/')"

[tool.pylint."MESSAGE CONTROL"]
disable = ["import-error", "no-member", "R0903", "unused-import", "consider-using-in"]
good-names = ["db", "id"]
